--- a/.github/workflows/nestjs-deploy.yml
+++ b/.github/workflows/nestjs-deploy.yml
@@ -3,43 +3,42 @@ name: Deploy NestJs to EC2
 on:
   push:
     branches:
-      - main  # Trigger deployment on push to the main branch
+      - main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Check out the repository code
-      
+        uses: actions/checkout@v3
+
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v2  # Set up Docker Buildx for building images
+        uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker build -t nestjs-app .  # Build the Docker image with the tag 'nestjs-app'
-      
+        run: docker build -t nestjs-app .
+
       - name: Save image as tar file
-        run: docker save nestjs-app > nestjs-app.tar  # Save the Docker image as a tar file
+        run: docker save nestjs-app > nestjs-app.tar
 
       - name: Copy image to EC2
-        uses: appleboy/scp-action@v0.1.4  # Use SCP action to copy the tar file to the EC2 instance
+        uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{secrets.EC2_HOST}}  # EC2 host address from secrets
-          username: ubuntu  # EC2 username
-          key: ${{secrets.EC2_SSH_KEY}}  # SSH private key from secrets
-          source: 'nestjs-app.tar'  # Source file to copy
-          target: "/home/ubuntu"  # Target directory on EC2
-      
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: 'nestjs-app.tar'
+          target: "/home/ubuntu"
+
       - name: SSH into EC2 and run container
-        uses: appleboy/ssh-action@v1.0.0  # Use SSH action to execute commands on the EC2 instance
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.EC2_HOST }}  # EC2 host address from secrets
-          username: ubuntu  # EC2 username
-          key: ${{ secrets.EC2_SSH_KEY }}  # SSH private key from secrets
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker load < nestjs-app.tar  # Load the Docker image from the tar file
-            docker stop nestjs-app || true && docker rm nestjs-app || true  # Stop and remove any existing container
-            docker run -d -p 3000:3000 --name nestjs-app nestjs-app  # Run the container on port 3000
-
-
+            docker load < nestjs-app.tar
+            docker stop nestjs-app || true
+            docker rm nestjs-app || true
+            docker run -d -p 3000:3000 --name nestjs-app nestjs-app
