--- a/.github/workflows/nestjs-deploy.yml
+++ b/.github/workflows/nestjs-deploy.yml
@@ -3,33 +3,33 @@ name: Deploy NestJs to EC2
 on:
   push:
     branches:
-      - main
+      - main  # Trigger deployment on push to the main branch
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Check out the repository code
 
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v2  # Set up Docker Buildx for building images
 
       - name: Build Docker image
-        run: docker build -t nestjs-app .
+        run: docker build -t nestjs-app .  # Build the Docker image with the tag 'nestjs-app'
 
       - name: Save image as tar file
-        run: docker save nestjs-app > nestjs-app.tar
+        run: docker save nestjs-app > nestjs-app.tar  # Save the Docker image as a tar file
 
       - name: Copy image to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: ${{ secrets.EC2_HOST }}  # EC2 host IP address from GitHub Secrets
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ secrets.EC2_SSH_KEY }}  # Your EC2 SSH private key from Secrets
           source: 'nestjs-app.tar'
-          target: "/home/ubuntu"
+          target: '/home/ubuntu'
 
       - name: SSH into EC2 and run container
         uses: appleboy/ssh-action@v1.0.0
@@ -38,7 +38,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker load < nestjs-app.tar
-            docker stop nestjs-app || true
-            docker rm nestjs-app || true
-            docker run -d -p 3000:3000 --name nestjs-app nestjs-app
+            sudo docker load < nestjs-app.tar
+            sudo docker stop nestjs-app || true
+            sudo docker rm nestjs-app || true
+            sudo docker run -d -p 3000:3000 --name nestjs-app nestjs-app
