--- a/.github/workflows/nestjs-deploy.yml
+++ b/.github/workflows/nestjs-deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy NestJs to EC2 with Docker Compose
+name: Deploy NestJS to EC2
 
 on:
   push:
     branches:
-      - main
+      - main  # Trigger deployment on push to main branch
 
 jobs:
   deploy:
@@ -13,32 +13,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
+      - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: Create app archive
-        run: tar -czf app.tar.gz .
+      - name: Build Docker image
+        run: docker build -t nestjs-app .
 
-      - name: Copy app to EC2
+      - name: Save Docker image to tar file
+        run: docker save nestjs-app -o nestjs-app.tar
+
+      - name: Copy Docker image to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "app.tar.gz"
+          source: "nestjs-app.tar"
           target: "/home/ubuntu"
 
-      - name: Deploy on EC2
+      - name: Run Docker container on EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd ~/NestJS-user-document-management || mkdir -p ~/NestJS-user-document-management && cd ~/NestJS-user-document-management
-            rm -rf ./*
-            tar -xzf ~/app.tar.gz -C ~/NestJS-user-document-management
-            cd ~/NestJS-user-document-management
-
-            sudo docker-compose down
-            sudo docker-compose up -d --build
+            sudo docker load -i nestjs-app.tar
+            sudo docker stop nestjs-app || true
+            sudo docker rm nestjs-app || true
+            sudo docker run -d -p 3000:3000 --name nestjs-app nestjs-app
